# Horion

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
docs/: architecture.md  core-management.md  development.md
scripts/: tauri.mjs
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/controller/: error.rs  mod.rs  model.rs  service.rs  transport.rs
src-tauri/src/core/: error.rs  install.rs  manager.rs  mod.rs  model.rs  paths.rs
src-tauri/src/profile/: credentials.rs  error.rs  mod.rs  model.rs  service.rs
src/app/: route-meta.ts  router.test.tsx  router.tsx
src/components/core/: core-provider.tsx
src/components/layout/: app-header.tsx  app-shell.tsx  sidebar.tsx
src/components/navigation/: proxy-tabs.tsx
src/components/proxy/: mode-switch.tsx
src/components/theme/: theme-controller.test.tsx  theme-controller.tsx
src/components/ui/: button.tsx  card.tsx  feature-badge.tsx  metric-card.tsx  modal.tsx  page-heading.tsx  page-state.tsx  status-chip.tsx
src/core/: core-status.ts  proxy-view.test.ts  proxy-view.ts
src/hooks/: use-resolved-theme.ts
src/pages/: connections-page.tsx  dashboard-page.tsx  logs-page.tsx  not-found-page.tsx  profiles-page.tsx  proxy-groups-page.tsx  proxy-nodes-page.tsx  route-error-page.tsx  settings-page.tsx
src/services/: core-client.test.ts  core-client.ts  management-clients.test.ts  profile-client.ts  proxy-client.ts
src/stores/: core-store.test.ts  core-store.ts  layout-store.ts  profile-store.test.ts  profile-store.ts  proxy-store.test.ts  proxy-store.ts  theme-store.ts
src/styles/: index.css
src/test/: setup.ts
src/types/: core.ts  profile.ts  proxy.ts  status.ts  theme.ts
src/utils/: cn.ts
