[package]
name = "horion"
version = "0.3.0"
description = "Secure desktop control plane for the Mihomo proxy core"
authors = ["Horion Contributors"]
edition = "2021"
license = "MIT"
rust-version = "1.85"

[lib]
name = "horion_lib"
crate-type = ["rlib"]

[[bin]]
name = "horion"
path = "src/main.rs"
test = false
bench = false

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
atomic-write-file = "=0.3.0"
chrono = { version = "=0.4.45", default-features = false, features = ["clock", "serde"] }
rand = "=0.9.2"
reqwest = { version = "=0.13.4", default-features = false, features = ["native-tls-no-alpn"] }
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.151"
serde_yaml_ng = "=0.10.0"
sha2 = "=0.10.9"
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-single-instance = "=2.4.3"
tempfile = "=3.23.0"
thiserror = "=2.0.19"
tokio = { version = "=1.53.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
zeroize = "=1.9.0"
zip = { version = "=2.4.2", default-features = false, features = ["deflate"] }
url = "=2.5.8"
uuid = { version = "=1.24.0", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = ["Win32_Foundation", "Win32_Security_Credentials"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
